# react-magnetic-di

./: .eslintplugin.js  .eslintrc.js  .flowconfig  .gitignore  LICENSE  README.md  babel.config.js  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.circleci/: config.yml
.github/workflows/: ci.yml  publish.yml
babel-plugin/: package.json
babel.macro/: package.json
babel.macro/types/: index.d.ts
eslint-plugin/: package.json
examples/: .babelrc.js  .eslintrc.js
examples/flow/: examples.js  index.html  index.js
examples/flow-macro/: index.html  index.js
examples/flow/components/: input.js  label.js  section.js
examples/global/: index.ts
examples/typescript/: examples.tsx  index.tsx
examples/typescript-macro/: index.html  index.tsx
macro/: package.json
macro/types/: index.d.ts  tsconfig.json
src/: context.js  index.js  index.js.flow  provide-deps.js  provider.js
src/__tests__/: integration.test.js  provide-deps.test.js  provider.test.js
src/babel/: constants.js  index.js  macro.js  macro.js.flow  processor-di.js  processor-hoc.js  processor-inj.js  utils.js
src/babel/__tests__/: macro.test.js  (+4 more)
src/eslint/: index.js  utils.js
src/react/: constants.js  consumer.js  context.js  global.js  injectable.js  provider.js  settings.js  stats.js  utils.js
src/swc/: Cargo.toml  README.md  package.json
src/swc/.cargo/: config.toml
src/swc/src/: lib.rs  transform.rs
src/swc/src/tests/: mod.rs
src/swc/src/tests/fixtures/class_component/: input.js  output.js
types/: index.d.ts  test.tsx
(+37 files in other folders)
